# Delfhos

./: .gitignore  ARCHITECTURE.md  DOCS.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt
benchmarks/: benchmark_runner.py  crewai_agent.py  langchain_agent.py  requirements-benchmark.txt  run_langchain_quickstart.py  smolagents_agent.py
cortex/: __init__.py  __init__.pyi  cortex.py  cortex.pyi  google_auth.py
cortex/_engine/: __init__.py  agent.py  connection.py  trace.py  types.py
cortex/_engine/api/: compiler.py  executor.py
cortex/_engine/config/: __init__.py  env_loader.py  llmPricing.json  pricing.py
cortex/_engine/core/: __init__.py  approval_manager.py  conversation_summarizer.py  orchestrator.py  orchestrator_codegen.py  orchestrator_scheduler.py  orchestrator_timing.py  python_executor.py
cortex/_engine/core/sandbox/: __init__.py  base.py  docker_sandbox.py  executor.py  local.py  rpc_protocol.py  rpc_server.py
cortex/_engine/core/sandbox/container/: Dockerfile  agent_runner.py  proxy_libraries.py
cortex/_engine/internal/: llm.py
cortex/_engine/mcp/: __init__.py  client.py  compiler.py  executor.py
cortex/_engine/memory/: AgentMemory.py  TaskMemory.py  __init__.py
cortex/_engine/tools/: __init__.py  classification.py  files.py  internal_tools.py  tool.py  tool_libraries.py  tool_registry.py
cortex/_engine/tools/calendar/: __init__.py  calendar_client.py  calendar_tool.py
cortex/_engine/tools/docs/: __init__.py  docs_client.py  docs_tool.py
cortex/_engine/tools/drive/: __init__.py  gdrive_client.py  gdrive_doc.py  gdrive_tool.py
cortex/_engine/tools/gmail/: __init__.py  gmail_client.py  gmail_dsl_parser.py  gmail_tool_unified.py
cortex/_engine/tools/sheets/: __init__.py  gsheets_client.py  gsheets_doc.py  gsheets_tool.py
cortex/_engine/tools/sql/: __init__.py  sql_client.py  sql_tool.py
cortex/_engine/tools/websearch/: __init__.py
cortex/_engine/utils/: __init__.py  console.py  error_codes.py  llm_utils.py  logger.py  pricing.py  search_utils.py
cortex/connections/: __init__.py  api.py  base.py  calendar.py  docs.py  drive.py  gmail.py  mcp.py  sheets.py  sql.py  websearch.py
cortex/tool_docs/: __init__.py  calendar.py  drive.py  files.py  gdocs.py  gmail.py  llm.py  sheets.py  sql.py  websearch.py
delfhos/: __init__.py  __init__.pyi  errors.py  errors.pyi  llm_config.py  tool.py  tool.pyi
delfhos/connections/: __init__.py
delfhos/memory/: __init__.py  __init__.pyi  chat.py  chat.pyi  persistent.py  persistent.pyi  types.py  types.pyi
delfhos/sandbox/: __init__.py  __init__.pyi  gmail.py  sql.py
delfhos/tools/: __init__.py  __init__.pyi  mcp.py  mcp.pyi  native.py  native.pyi
docs/architecture/: EMBEDDINGS.md  LLM_COMPATIBILITY.md  TOOLS.md
examples/: api_tool_example.py  basic_example.py  hello_delfhos.py  integration_test_1.py  integration_test_2.py  invoice_tracker.py  rerun_example.py  simple_search.py
examples/Advanced/: agent_demo.py  compare_models.py
examples/ChatMemory/: chat_example.py
examples/CustomTools/: custom_tool_example.py  real_agent_confirm_simple.py
examples/MCPTools/: mcp_example.py
examples/NativeTools/: native_tools_example.py  oauth_gmail.json  sandbox_mock_example.py
examples/PersistentMemory/: memory_demo.py
tests/: test_action_restrictions.py  test_api_tool.py  test_approval_manager.py  test_classification.py  test_confirm_policy.py  test_console_lifecycle.py  test_console_task_summary_tokens.py  test_conversation_summarizer.py  test_custom_tool_confirm.py  test_embedding_compatibility.py  test_error_recovery_state.py  test_error_system.py  test_errors_engine.py  test_file_preview_helpers.py  test_google_auth.py  test_llm_accounting.py  test_llm_config_settings.py  test_mcp_compiler.py  test_mcp_inspect.py  test_memory_integration.py  test_orchestrator_codegen_parsing.py  test_orchestrator_context_compat.py  test_orchestrator_integration.py  test_orchestrator_scheduler.py  test_orchestrator_timing.py  test_prefilter_compaction.py  test_python_executor_utils.py  test_tool_registry.py  test_typeddict.py
