[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "delfhos"
version = "0.4.0"
description = "Delfhos — AI agent SDK with typed connections and tool orchestration"
keywords = ["ai", "agents", "sdk", "automation", "mcp", "gemini"]
authors = [
    { name = "David Serrano", email = "davidsd.2704@gmail.com" }
]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "google-genai>=1.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.12.0",
    "pydantic>=2.0.0",
    "tenacity>=8.0.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.1.0",
    "google-api-python-client>=2.0.0",
]

[project.optional-dependencies]
sql = [
    "psycopg2-binary>=2.9,<3.0",
    "mysql-connector-python>=8.0,<9.0",
]
dev = [
    "build>=1.2.2",
    "twine>=5.1.1",
    "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
include = ["cortex*", "delfhos*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"cortex._engine.config" = ["llmPricing.json"]

[project.urls]
"Homepage" = "https://github.com/DavidFraifer/delfhos"
"Source" = "https://github.com/DavidFraifer/delfhos"
"Issues" = "https://github.com/DavidFraifer/delfhos/issues"
