[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "delfhos"
version = "0.5.3"
description = "Delfhos — AI agent SDK with typed connections and tool orchestration"
keywords = ["ai", "agents", "sdk", "automation", "mcp", "gemini"]
authors = [
    { name = "David Serrano", email = "davidsd.2704@gmail.com" }
]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "google-genai>=1.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.12.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "tenacity>=8.0.0",
    "numpy>=1.24.0",
    "sentence-transformers>=2.2.0",
    "transformers>=4.30.0",
    "huggingface-hub>=0.16.0",
    "psycopg2-binary>=2.9,<3.0",
    "mysql-connector-python>=8.0,<9.0",
    "openpyxl>=3.1.0",
    "PyPDF2>=3.0.0",
    "PyYAML>=6.0.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.1.0",
    "google-api-python-client>=2.0.0",
    "rich>=10.0.0",
    "questionary>=2.1.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "python-multipart>=0.0.6",
    "python-jose>=3.3.0",
    "email-validator>=2.0.0",
    "passlib>=1.7.4",
    "bcrypt>=4.0.0",
    "websockets>=11.0",
    "httpx>=0.24.0",
    "tqdm>=4.65.0",
    "stripe>=5.0.0",
    "supabase>=2.0.0",
    "postgrest>=0.10.0",
]

[project.optional-dependencies]
sql = [
    "psycopg2-binary>=2.9,<3.0",
    "mysql-connector-python>=8.0,<9.0",
]
dev = [
    "build>=1.2.2",
    "twine>=5.1.1",
    "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
include = ["cortex*", "delfhos*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
delfhos = ["py.typed", "**/*.pyi"]
cortex = ["py.typed", "**/*.pyi"]

[project.urls]
"Homepage" = "https://github.com/DavidFraifer/delfhos"
"Source" = "https://github.com/DavidFraifer/delfhos"
"Issues" = "https://github.com/DavidFraifer/delfhos/issues"
